[package]
name = "sshfs"
version = "0.4.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "1"
bitflags = "2"
log = "0.4"
libc = "0.2"
env_logger = "0.11"
chrono = "0.4"
async-trait = "0.1.9"
nfsserve = { version = "0.10.2", path = "../nfsserve" }
